Create endpoint for update diamond after winning a match
